[package]
name = "pledge-management-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.14"
diesel = { version = "1.4.4", features = ["mysql", "r2d2"] }
dotenv = "0.15.0"
serde_json = "1.0"
bcrypt = "0.10"
lazy_static = "1.4.0"
jsonwebtoken = "7.1.0"
chrono = "0.4.11"
serde = "1.0.131"
serde_derive = "1.0.131"
actix-web-httpauth = "0.5.1"